# MetOffice-Pipeline-to-Medallion-Warehouse

./: .gitignore  Dockerfile  Dockerfile.spark  Dockerfile.test  LICENSE  README.md  cloudbuild.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
archive/: Dockerfile  ingest_geography_data.py  pyproject.toml  requirements.txt
archive/testing/: test_gcp_connection.py  test_pyspark_delta.py
common/: file_utils.py
dags/: met_office_api_ingestion.py  met_office_bronze.py  met_office_full_pipeline.py  met_office_full_pipeline_deprecated.txt  met_office_gold.py  met_office_silver.py  test_script.py  test_script.txt
scripts/bronze/: load_met_office_land_observations_to_bronze.py  load_met_office_land_observations_to_landed.py  load_met_office_metadata_to_bronze.py
scripts/gold/: load_dim_date.py  load_dim_weather_stations  load_dim_weather_stations.py  load_fact_weather_metrics.py
scripts/ingestion/: ingest_geography_data.py  ingest_met_office_land_observations_to_landed.py  ingest_met_office_metadata_to_cache.py  ingest_met_office_metadata_to_landed.py  ingest_met_office_to_bronze.py
scripts/silver/: load_met_office_land_observations_to_silver.py  load_met_office_metadata_to_silver.py
seeds/: .~lock.met_office_weather_stations_seed.csv#  geography_backup_seed.json  met_office_weather_stations_seed.csv
terraform/: composer_scheduler.tf  main.tf  variables.tf
tests/: Dockerfile.test  conftest.py  docker-compose.yaml  test_branch_logic.py  test_dag_integrity.py  test_ingestion.py  test_transforms_gold.py  test_transforms_silver.py
(+6 files in other folders)
