[project]
name = "noaa-pipeline-to-medallion-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "apache-airflow>=2.10.5",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "polars>=1.40.1",
    "requests>=2.33.1",
    "pyspark[connect]==3.5.3",
    "delta-spark==3.2.0",
    "deltalake>=1.5.1",
    "universal-pathlib>=0.3.10",
    "gcsfs>=2026.5.0",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-cncf-kubernetes>=10.17.0",
    "apache-airflow-providers-google>=21.3.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
